--- a/index.html
+++ b/index.html
@@ -12,5 +12,29 @@
 </head>
 <body>
 
+    <header class="header contenedor">
+        <div class="header__grid">
+            <div class="header__logo">
+                <img src="build/img/logo.svg" alt="logo carolina spa">
+            </div>
+
+            <nav class="sociales">
+                <p>Menu redes sociales</p>
+            </nav>
+        </div>
+    </header>
+
+    <div class="navegacion">
+        <div class="navegacion__border">
+            <nav class="navegacion__contenedor">
+                <a href="#" class="navegacion__enlace">Inicio</a>
+                <a href="#" class="navegacion__enlace">Nosotros</a>
+                <a href="#" class="navegacion__enlace">Servicios</a>
+                <a href="#" class="navegacion__enlace">Productos</a>
+                <a href="#" class="navegacion__enlace">Contacto</a>
+            </nav>
+        </div>   
+    </div>
+
 </body>
 </html>
