--- a/index.html
+++ b/index.html
@@ -19,7 +19,21 @@
             </div>
 
             <nav class="sociales">
-                <p>Menu redes sociales</p>
+                <a href="https://facebook.com">
+                    Facebook
+                </a>
+                <a href="https://twitter.com">
+                    Twitter
+                </a>
+                <a href="https://instagram.com">
+                    Instagram
+                </a>
+                <a href="https://youtube.com">
+                    Youtube
+                </a>
+                <a href="https://tiktok.com">
+                    Tiktok
+                </a>
             </nav>
         </div>
     </header>
