--- a/index.html
+++ b/index.html
@@ -19,20 +19,23 @@
             </div>
 
             <nav class="sociales">
-                <a href="https://facebook.com">
-                    Facebook
+                <a class="sociales__enlace" href="https://facebook.com">
+                    <span class="sociales__accesible">Facebook</span>
                 </a>
-                <a href="https://twitter.com">
-                    Twitter
+                <a class="sociales__enlace" href="https://twitter.com">
+                    <span class="sociales__accesible">Twitter</span>
                 </a>
-                <a href="https://instagram.com">
-                    Instagram
+                <a class="sociales__enlace" href="https://instagram.com">
+                    <span class="sociales__accesible">Instagram</span>
                 </a>
-                <a href="https://youtube.com">
-                    Youtube
+                <a class="sociales__enlace" href="https://youtube.com">
+                    <span class="sociales__accesible">Youtube</span>
                 </a>
-                <a href="https://tiktok.com">
-                    Tiktok
+                <a class="sociales__enlace" href="https://pinterest.com">
+                    <span class="sociales__accesible">Pinterest</span>
+                </a>
+                <a class="sociales__enlace" href="https://tiktok.com">
+                    <span class="sociales__accesible">Tiktok</span>
                 </a>
             </nav>
         </div>
