--- a/index.html
+++ b/index.html
@@ -53,5 +53,18 @@
         </div>   
     </div>
 
+    <section class="slider">
+        <ul class="slider__contenedor">
+            <li class="slider__slide">
+                <img src="build/img/slide_03.jpg" alt="">
+            </li>
+        </ul>
+    </section>
+    
+    <section class="bienvenida seccion">
+        <h1 class="bienvenida__heading">Bienvenida(o) a nuestro <span>sitio web</span></h1>
+        <p class="bienvenida__texto">Te sentirás como nueva(o) con nuestros masajistas profesionales</p>
+    </section>
+
 </body>
 </html>
