--- a/index.html
+++ b/index.html
@@ -66,5 +66,31 @@
         <p class="bienvenida__texto">Te sentirás como nueva(o) con nuestros masajistas profesionales</p>
     </section>
 
+    <section class="cards">
+        <div class="cards__grid contenedor">
+            <div class="card">
+                <img src="build/img/servicio_01.jpg" alt="imagen card" class="card__imagen">
+                <div class="card__contenido">
+                    <h2 class="card__heading">Conoce sobre <span>Nosotros</span></h2>
+                    <a href="#" class="card__enlace">Leer más</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="build/img/servicio_02.jpg" alt="imagen card" class="card__imagen">
+                <div class="card__contenido">
+                    <h2 class="card__heading">Nuestros <span>servicios</span></h2>
+                    <a href="#" class="card__enlace">Leer más</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="build/img/servicio_03.jpg" alt="imagen card" class="card__imagen">
+                <div class="card__contenido">
+                    <h2 class="card__heading">visita nuestra <span>tienda</span></h2>
+                    <a href="#" class="card__enlace">Leer más</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
