--- a/index.html
+++ b/index.html
@@ -92,5 +92,64 @@
         </div>
     </section>
 
+    <section class="horario">
+        <div class="horario__grid contenedor">
+            <div class="horario__contenido">
+                <h3 class="horario__heading">Horarios</h3>
+                <p class="horario__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut sed nisi impedit dignissimos delectus inventore, vel beatae voluptatem cumque quia sequi ducimus tempore animi! Voluptatibus at et corrupti eos cum.    
+                </p>
+
+                <table class="tabla">
+                    <thead class="tabla__thead">
+                        <tr>
+                            <th class="tabla__th">Día</th>
+                            <th class="tabla__th">De</th>
+                            <th class="tabla__th">Hasta</th>
+                        </tr>
+                    </thead>
+
+                    <tbody class="tabla__tbody">
+                        <tr class="tabla__tr">
+                            <td class="tabla__td">Lunes</td>
+                            <td class="tabla__td">9:00</td>
+                            <td class="tabla__td">19:00</td>
+                        </tr>
+                        <tr class="tabla__tr">
+                            <td class="tabla__td">Martes</td>
+                            <td class="tabla__td">9:00</td>
+                            <td class="tabla__td">19:00</td>
+                        </tr>
+                        <tr class="tabla__tr">
+                            <td class="tabla__td">Miercoles</td>
+                            <td class="tabla__td">9:00</td>
+                            <td class="tabla__td">19:00</td>
+                        </tr>
+                        <tr class="tabla__tr">
+                            <td class="tabla__td">Jueves</td>
+                            <td class="tabla__td">9:00</td>
+                            <td class="tabla__td">19:00</td>
+                        </tr>
+                        <tr class="tabla__tr">
+                            <td class="tabla__td">Viernes</td>
+                            <td class="tabla__td">9:00</td>
+                            <td class="tabla__td">19:00</td>
+                        </tr>
+                        <tr class="tabla__tr">
+                            <td class="tabla__td">Sabado</td>
+                            <td class="tabla__td">9:00</td>
+                            <td class="tabla__td">19:00</td>
+                        </tr>
+                        <tr class="tabla__tr">
+                            <td class="tabla__td">Domingo</td>
+                            <td class="tabla__td" colspan="2">Cerrado</td>
+                            
+                        </tr>
+                    </tbody>
+                </table>
+
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
