Agregado seccion cita en HTML

--- a/index.html
+++ b/index.html
@@ -200,5 +200,12 @@
         </div>
     </main>
 
+    <section class="cita">
+        <h2 class="cita__heading">Realiza una cita</h2>
+        <p class="cita__texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere culpa illum corporis rerum, necessitatibus ab ratione sint a nemo mollitia quia repellat eius nihil laudantium officiis, odio possimus est assumenda?</p>
+
+        <a href="#" class="cita__enlace">Leer más</a>
+    </section>
+
 </body>
 </html>
