--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Italianno&family=Lato:wght@400;700;900&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="build/css/app.css">
 </head>
 <body>
@@ -53,10 +54,16 @@
         </div>   
     </div>
 
-    <section class="slider">
+    <section class="slider contenedor">
         <ul class="slider__contenedor">
             <li class="slider__slide">
-                <img src="build/img/slide_03.jpg" alt="">
+                <img class="slider__imagen" src="build/img/slide_01.jpg" alt="">
+            </li>
+            <li class="slider__slide">
+                <img class="slider__imagen" src="build/img/slide_02.jpg" alt="">
+            </li>
+            <li class="slider__slide">
+                <img class="slider__imagen" src="build/img/slide_03.jpg" alt="">
             </li>
         </ul>
     </section>
@@ -252,5 +259,7 @@
         <p class="footer__copyright">Carolina Spa & Salón, Todos los Derechos Reservados</p>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
