--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
         </div>   
     </div>
 
-    <section class="slider contenedor">
-        <ul class="slider__contenedor">
-            <li class="slider__slide">
+    <section class="swiper contenedor">
+        <ul class="swiper-wrapper">
+            <li class="swiper-slide">
                 <img class="slider__imagen" src="build/img/slide_01.jpg" alt="">
             </li>
-            <li class="slider__slide">
+            <li class="swiper-slide">
                 <img class="slider__imagen" src="build/img/slide_02.jpg" alt="">
             </li>
-            <li class="slider__slide">
+            <li class="swiper-slide">
                 <img class="slider__imagen" src="build/img/slide_03.jpg" alt="">
             </li>
         </ul>
